# firefox-session-ui-gtk4

./: .typos.toml  Cargo.toml  Readme.md  build.rs  bundle.bat  bundle.py
.github/workflows/: release.yml
icons/: gtk-rs-source.txt
src/: actions.rs  dark_theme.rs  lib.rs  main.rs  style.css
